# opencv-wasm-starter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  bundle-with-wasm.js  demo.js  demo.wasm  index.html  karma.conf.js  package-lock.json  package.json
.github/workflows/: main.yml
example/: index.html
src/: .clang-format  main.cpp  post-worker.js  pre.js  utilities.cpp  utilities.h
tests/: test.js
